--- a/prof-marcos/jogo-velha-prof-marcos/styles/styles.css
+++ b/prof-marcos/jogo-velha-prof-marcos/styles/styles.css
@@ -9,22 +9,27 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 27.76%;
+  width: 29.76%;
   background-color: #0097e6;
 }
 
 .container-center {
-  width: 44.48%;
-  background-color: gray;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  width: 40.48%;
+  background-color: #3cb8fad3;
 }
 
 .container-right {
-  width: 27.76%;
+  width: 29.76%;
   background-color: yellow;
 }
 
-.user-filed-box {
-  width: 72%;
+.user-field-box {
+  margin-top: 30px;
+  width: 80%;
 }
 
 .user-field-wrapper {
@@ -33,7 +38,7 @@
   width: 100%;
   height: 40px;
   background-color: #ffffff;
-  margin-bottom: 29px;
+  margin-bottom: 20px;
   border-radius: 10px;
   overflow: hidden;
   padding-right: 6px;
@@ -75,7 +80,7 @@
 
 .match-type-title {
   color: #45f391;
-  margin-bottom: 38px;
+  margin-bottom: 20px;
   font-size: 20px;
 }
 
@@ -83,8 +88,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 72%;
-  margin-bottom: 33px;
+  width: 80%;
+  margin-bottom: 20px;
 }
 
 .match-type-text {
@@ -92,51 +97,167 @@
   color: #ffffff;
 }
 
-.button-play{
-    width: 72%;
-    height: 60px;
-    background-color: #45F391;
-    border-radius: 15px;
-    color: #ffffff;
-    border: none;
-    outline: none;
-    font-size: 30px;
-    box-shadow: 0px 3px 6px #00000029;
-    margin-bottom: 46px;
+.button-play {
+  width: 80%;
+  height: 60px;
+  background-color: #45f391;
+  border-radius: 15px;
+  color: #ffffff;
+  border: none;
+  outline: none;
+  font-size: 30px;
+  box-shadow: 0px 3px 6px #00000029;
+  margin-bottom: 20px;
 }
 
-.match-historic-list{
-    width:73%;
+.match-historic-list {
+  width: 80%;
+  max-height: 200px;
+  overflow-y: auto;
+  padding-right: 10px;
+  margin-bottom: 20px;
 }
 
+.match-historic-item {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-bottom: 30px;
+}
 
-.match-historic-item{
-width:73%;
+.match-historic-title {
+  color: #ffffff;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.match-historic-winner-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 10%;
+  height: 76px;
+  background-color: #ffffff;
+  padding-left: 13px;
+  border-radius: 10px;
+  width: 50%;
+}
+
+.match-historic-winner-title {
+  color: #45f391;
+  font-size: 28px;
+  margin-bottom: 3px;
+  font-weight: bold;
+  width: 100%;
+}
+
+.match-historic-winner {
+  color: #6a6a6a;
+  font-size: 16px;
+}
+
+.match-historic-board-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 25px;
+  height: 25px;
+  border-radius: 5px;
+  background-color: #ffffff;
+  color: #6a6a6a;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.match-historic-board {
+  height: 80px;
+  max-height: 80px;
+  width: 80px;
+  max-width: 80px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.match-historic-separator {
+  color: #ffffff;
+  display: flex;
+  align-items: center;
+}
+
+.reset-wrapper {
+  display: flex;
+  width: 80%;
+  margin-bottom: 20px;
+}
+.reset-game {
+  width: 100%;
+  height: 60px;
+  border: none;
+  border-radius: 15px;
+  background-color: #ffffff;
+  box-shadow: 0px 3px 6px #00000029;
+  color: #0097e6;
+  outline: none;
+}
+
+.score-board {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 80%;
+  height: 120px;
+  background-color: #ffffff;
+  border-radius: 20px;
+  margin: 30px 20px;
+}
+
+.wrraper-placard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  height: 80%;
+}
+
+.score-player01 {
+  font-size: 55px;
+  color: #0097e6;
+}
+
+.score-player02 {
+  font-size: 55px;
+  color: #0097e6;
+}
+
+.placard-title {
+  font-size: 30px;
+  color: #0097e6;
+}
+
+.placard-player {
+  font-size: 23px;
+  color: #0097e6;
+}
+
+.field-main{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 80%;
+  max-width: 80%;
+  height: 80%;
 
 }
 
-.match-historic-title{
-    color: #ffffff;
-    font-size: 20px;
-    margin-bottom: 38px;
-}
-
-.match-historic-winner-box{
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    height: 76px;
-    background-color: #ffffff;
-    padding-left: 21px;
-}
-
-.match-historic-winner-title{
-    color: #45F391;
-    font-size: 30px;
-    margin-bottom: 3px;
-}
-
-.match-historic-winner-title{
-
-
+.field{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffffff;
+  width:  120px;
+  height: 150px;
+  font-size: 150px;
+  color: #6A6A6A;
+  border-radius: 10px;
 }
