--- a/prof-marcos/revisao/layouts/jogo-velha01/index.html
+++ b/prof-marcos/revisao/layouts/jogo-velha01/index.html
@@ -172,15 +172,15 @@
           </div>
 
           <div class="wrapper-main-panel">
-            <span class="panel-move">X</span>
-            <span class="panel-move">X</span>
-            <span class="panel-move">X</span>
-            <span class="panel-move">X</span>
-            <span class="panel-move">X</span>
-            <span class="panel-move">X</span>
-            <span class="panel-move">X</span>
-            <span class="panel-move"></span>
-            <span class="panel-move">X</span>
+            <span class="panel-move panel-move00"></span>
+            <span class="panel-move panel-move01"></span>
+            <span class="panel-move panel-move02"></span>
+            <span class="panel-move panel-move03"></span>
+            <span class="panel-move panel-move04"></span>
+            <span class="panel-move panel-move05"></span>
+            <span class="panel-move panel-move06"></span>
+            <span class="panel-move panel-move07"></span>
+            <span class="panel-move panel-move08"></span>
           </div>
         </div>
       </section>
