--- a/prof-marcos/revisao/layouts/ecommerce-v1/index.html
+++ b/prof-marcos/revisao/layouts/ecommerce-v1/index.html
@@ -90,7 +90,6 @@
                 </div>
             </div>
         </section>
-        <!-- Slideshow container -->
         <section class="new-arrivals">
 
             <div class="box-title-new-arrival">
@@ -104,7 +103,6 @@
                     <a class="next">&#10095;</a>
                 </div>
             </div>
-
 
             <!-- Frist box  -->
             <div class="box-new-arrival1 fade">
@@ -181,16 +179,19 @@
                         <span class="price-product">R$ 2,99</span>
                     </div>
                 </div>
-
-
-
             </div>
-
         </section>
-
-
-
+        <section class="banners">
+            <div class="box-banners">
+                <img class="img-banner" src="https://blueskytechmage.com/ayo/media/banner9-1.jpg">
+                <img class="img-banner" src="https://blueskytechmage.com/ayo/media/banner9-2.jpg">
+                <img class="img-banner" src="https://blueskytechmage.com/ayo/media/banner9-3.jpg">
+            </div>
+        </section>
     </main>
+    <footer class="footer">
+        <p class="text-footer">© 2021 - Desenvolvido para estudos.</p>
+    </footer>
     <script type="module" src="scripts/index.js"></script>
     <script src="https://kit.fontawesome.com/a899726fcb.js" crossorigin="anonymous"></script>
 </body>
