--- a/prof-marcos/revisao/layouts/ecommerce-v1/styles/styles.css
+++ b/prof-marcos/revisao/layouts/ecommerce-v1/styles/styles.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap");
 .container {
     width: 100%;
+    margin-bottom: 1rem;
 }
 
 .header {
@@ -298,7 +299,7 @@
 .box-product {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: left;
     width: 25%;
     height: 100%;
@@ -338,4 +339,38 @@
 .price-product {
     font-weight: bold;
     color: #222222;
+}
+
+.banners {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.box-banners {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 80%;
+}
+
+.img-banner {
+    max-width: 370px;
+    max-height: 150px;
+    cursor: pointer;
+}
+
+.img-banner:hover {
+    filter: grayscale(.10);
+    filter: saturate(90%)
+}
+
+.footer {
+    background-color: #5ea201;
+    text-align: center;
+}
+
+.text-footer {
+    color: #ffffff;
+    padding-top: 0.1rem;
 }
