--- a/prof-marcos/revisao/layouts/ecommerce-v1/index.html
+++ b/prof-marcos/revisao/layouts/ecommerce-v1/index.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/styles.css" />
     <title>Mauá Frutas Online</title>
-</head>
-
-<body>
-    <main class="container">
-    </main>
-    <footer class="footer">
-        <p class="text-footer">© 2021 - Desenvolvido para estudos.</p>
-    </footer>
+  </head>
+  <body>
+    <main class="container"></main>
     <script type="module" src="scripts/index.js"></script>
-    <script src="https://kit.fontawesome.com/a899726fcb.js" crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://kit.fontawesome.com/a899726fcb.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
